--- a/extension/src/options/options.html
+++ b/extension/src/options/options.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NudgeNotes Settings</title>
+  <title>TABULA Settings</title>
   <link rel="stylesheet" href="options.css">
 </head>
 <body>
