--- a/extension/src/popup/popup.html
+++ b/extension/src/popup/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NudgeNotes</title>
+  <title>TABULA</title>
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
